Changes for independent school funding